# sealhits

./: .gitignore  .gitlab-ci.yml  404.html  README.md  check.py  dtest.ipynb  glf_to_png.py  index.html  ingest.py  ingest_glfs_hdd.py  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  sealhits.sql  search.html  single.py  undigest.py  video.py
database/: index.html
docs/: database.md  explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
explanation/: index.html
how-to-guides/: index.html
migrations/: 2024_02_21.py
reference/: index.html
sealhits/: bbox.py  btable.py  cache.py  compress.py  constants.py  image.py  track.py  utils.py  video.py
sealhits/db/: db.py  dbdel.py  dbget.py  dbmodel.py  dbschema.py  dbsearch.py  dbset.py  dbup.py
sealhits/sources/: files.py  glf.py  glfextract.py  group.py  model.py  pgdf.py  sqlpam.py
search/: search_index.json
test/: conftest.py  test_boxes.py  test_db.py  test_delete.py  test_image.py  test_ingest.py  test_lz4.py  test_sqlpam.py  test_video.py
tutorials/: index.html
